v2026.3.0/en/_sources/furiosa_llm/structured-output.rst
.. _StructuredOutput:

*****************
Structured Output
*****************

Furiosa-LLM supports structured output generation, enabling you to constrain
the model's output to follow specific formats, schemas, or patterns.
This feature is essential for applications requiring consistent,
parsable responses such as JSON data extraction and any-formatted text generation.

Backends for Structured Output
================================

Furiosa-LLM supports multiple backends for structured output:

* **xgrammar** (default): High-performance grammar-guided generation using `XGrammar <https://github.com/mlc-ai/xgrammar>`_
* **llguidance**: Efficient constraint enforcement using `llguidance <https://github.com/guidance-ai/llguidance>`_

You can select a backend based on your performance and compatibility needs.

**Using the serving command:**

.. code-block:: bash

   furiosa-llm serve <model> --structured-outputs-backend {auto,guidance,xgrammar}

**Using the Python API:**

.. code-block:: python

   from furiosa_llm import LLM

   with LLM(
       model_id_or_path,
       structured_outputs_backend="guidance",  # or "xgrammar", "auto"
   ) as llm:
       outputs = llm.generate(prompts, sampling_params)

This option determines which structured output backend to use for structured output.

The available options are:

* ``auto`` (default): Let engine choose the backend. It currently defaults to xgrammar.
* ``guidance``: Explicitly choose the llguidance backend.
* ``xgrammar``: Explicitly choose the XGrammar backend.

Note that this choice of preferred backend can be overridden in each user request, as explained below.


.. _DynamicBackend:

Dynamic Backend Choice
================================

Furiosa-LLM supports dynamic, per-request choice of backend. Users can use the field ``backend`` to specify the backend to use in this request.

If this field is absent or is set to ``auto``, the default backend of the server (chosen as explained above) will be used.

.. code-block:: python

   response = client.chat.completions.create(
      model="my-model",
      messages=[{"role": "user", "content": "Classify: positive or negative"}],
      extra_body={
         "structured_outputs": {
            "backend": "xgrammar", # or "guidance", "auto"
            "choice": ["positive", "negative"],
         }
      },
   )


Supported Methods via OpenAI API
================================
Users can generate structured outputs using both OpenAI's `Completions API <https://platform.openai.com/docs/api-reference/completions>`_ and
`Chat Completions API <https://platform.openai.com/docs/api-reference/chat>`_.
Furiosa-LLM supports four main types of structured output constraints:

- Choices: Forces the output to be one of predefined options
- Regular Expressions: Generates text matching a specific regular expression pattern
- JSON Schema: Produces JSON output following a predefined schema
- Context-free Grammar: Generates text following a context-free grammar specification

.. _GuidedChoice:

Choices
-------

The ``choice`` field in ``structured_outputs`` constrains the model output to be one of a predefined set of choices. This is particularly useful for classification tasks or when you need the model to select from specific options.

**Usage Example:**

.. literalinclude:: ../../../examples/online_chat_completion_structured_output_choice.py
   :language: python

**Use Cases:**

* Sentiment analysis
* Category classification
* Multiple choice questions
* Binary decisions (yes/no, true/false)

.. _GuidedRegex:

Regular Expressions
-------------------

The ``regex`` field in ``structured_outputs`` ensures the generated text matches a specific regular expression pattern. This is useful for generating structured text like email addresses, phone numbers, or custom formats.

**Usage Example:**

.. literalinclude:: ../../../examples/online_chat_completion_structured_output_regex.py
   :language: python

**Use Cases:**

* Email address generation
* Phone number formatting
* ID or code generation
* Custom text patterns
* URL or file path generation

.. _GuidedJSON:

JSON Schema
-----------

The ``json`` field in ``structured_outputs`` is the most commonly used structured output method. It ensures the generated output is valid JSON that conforms to a specified schema. This is ideal for extracting structured data or creating consistent API responses.

**Usage Example:**

.. literalinclude:: ../../../examples/online_chat_completion_structured_output_json.py
   :language: python

**Use Cases:**

* Data extraction from unstructured text
* API response formatting
* Database record creation
* Configuration file generation

.. _GuidedGrammar:

Context-free Grammar
--------------------

The ``grammar`` field in ``structured_outputs`` allows you to define a context-free grammar specification that the generated text must follow. This provides the most flexible control over output structure.

**Grammar Format Support:**

The llguidance backend currently supports multiple grammar formats:

- **EBNF (Extended Backus-Naur Form)**: Standard grammar notation with ``::=`` syntax
- **Lark**: a modern parsing library for Python (`Lark document <https://lark-parser.readthedocs.io/en/stable/>`_)

**Usage Example:**

.. literalinclude:: ../../../examples/online_chat_completion_structured_output_grammar.py
   :language: python

The example above uses EBNF format with the ``::=`` notation. You can also use Lark format with different syntax rules depending on your grammar complexity requirements.

**Use Cases:**

* SQL query generation
* Code generation with specific syntax
* Mathematical expressions
* Custom domain-specific languages
* Complex structured formats

.. _StructuredOutputMigration:

Migration from Deprecated ``guided_*`` Fields
==============================================

.. deprecated:: 2026.2.0
   The ``guided_json``, ``guided_regex``, ``guided_choice``, and ``guided_grammar``
   API fields are deprecated and will be removed in a future release.
   Use the ``structured_outputs`` parameter instead.

If you are using the deprecated ``guided_*`` API fields, please update your code
to use the new ``structured_outputs`` parameter. The deprecated fields will continue
to work but will emit a deprecation warning.

Field Mapping
-------------

.. list-table::
   :header-rows: 1
   :widths: 40 60

   * - Deprecated Field
     - New Parameter
   * - ``guided_json``
     - ``structured_outputs={"json": ...}``
   * - ``guided_regex``
     - ``structured_outputs={"regex": ...}``
   * - ``guided_choice``
     - ``structured_outputs={"choice": ...}``
   * - ``guided_grammar``
     - ``structured_outputs={"grammar": ...}``

Migration Examples
------------------

**Before (deprecated):**

.. code-block:: python

   response = client.chat.completions.create(
       model="my-model",
       messages=[{"role": "user", "content": "Classify: positive or negative"}],
       extra_body={"guided_choice": ["positive", "negative"]},
   )

**After (recommended):**

.. code-block:: python

   response = client.chat.completions.create(
       model="my-model",
       messages=[{"role": "user", "content": "Classify: positive or negative"}],
       extra_body={"structured_outputs": {"choice": ["positive", "negative"]}},
   )

.. note::
   Using both deprecated ``guided_*`` fields and ``structured_outputs`` in the same
   request will raise an error. Please migrate to ``structured_outputs`` only.
